--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.14"
 dependencies = [
+    "numpy>=2.4.0",
     "typer>=0.20.0",
 ]
